Add comprehensive E2E tests and test infrastructure
- Add end-to-end test suite (29 tests covering complete SDK flow)
- Test product search, cart operations, buyer info, and payment flows
- Add Jest configuration with ESM support
- Add test documentation and setup instructions
- Update test scripts with --forceExit for Stripe cleanup
- Fix test suite to expect 10 MCP tools (not 6)
- Tests pass without Stripe key (skips integration tests)

All tests passing ✅

--- a/packages/mcp-acp-checkout/package.json
+++ b/packages/mcp-acp-checkout/package.json
@@ -8,7 +8,9 @@
   "scripts": {
     "build": "tsc",
     "dev": "tsc --watch",
-    "test": "jest",
+    "test": "NODE_OPTIONS=--experimental-vm-modules jest --forceExit",
+    "test:watch": "NODE_OPTIONS=--experimental-vm-modules jest --watch",
+    "test:coverage": "NODE_OPTIONS=--experimental-vm-modules jest --coverage --forceExit",
     "lint": "eslint src --ext .ts",
     "prepublishOnly": "npm run build"
   },
